--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Backbone Demo</title>
-  <script data-main="main" src="lib/require.js"></script>  
+  <script data-main="backbone-demo/main" src="backbone-demo/lib/require.js"></script>
 </head>
 <body>
   <h1>Backbone Demo</h1>
   <div id="container">container</div>
+  <button id="add-year">Add one year to the first cat</button>
 </body>
 </html>
