--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
   <script data-main="backbone-demo/main" src="backbone-demo/lib/require.js"></script>
 </head>
 <body>
+
   <h1>Backbone Demo</h1>
+
   <div id="container">container</div>
+
   <button id="add-year">Add one year to the first cat</button>
+
+  <h2>All cool kittens</h2>
+  <div id="kittens"></div>
+
 </body>
 </html>
